# hq-launcher

./: .env.example  .gitignore  .md  CHANGELOG.md  LICENSE  README.md  REMOTE_MANIFEST.md  charly.py  design.md  index.html  install.sh  jsconfig.json  manifest.json  package-lock.json  package.json  privacy.html  sapsucker.cs  terms.html  vite.config.js
.github/workflows/: build.yml
docs/: CUSTOM_LAYOUT.md  EVENTS_MANIFEST.md  GAME_OVERLAY_MODULES.md  REMOTE_MANIFEST.md  hq-overlay-module.d.ts
docs/legal/: privacy-policy.md  terms-of-service.md
public/: index.html
scripts/: tauri-wrapper.mjs
src/: App.css  App.jsx  AppRoot.jsx  GameOverlay.jsx  ThemeSettingsWindow.jsx  Titlebar.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: bepinex_cfg.rs  discord_presence.rs  downloader.rs  event_config.rs  google_oauth.rs  installer.rs  lib.rs  logger.rs  main.rs  mod_config.rs  mods.rs  paths.rs  progress.rs  release_channel.rs  storage.rs  thunderstore.rs  variable.rs  zip_utils.rs
src-tauri/src/lcstats_autosheet/: mod.rs  sheets.rs  stats.rs
src-tauri/src/lcstats_autosheet/layouts/: autosheetmodel.rs  breadsheet.rs  charlyautosheet.rs  customlayout.rs  evilsheet.rs  makusheet.rs  mod.rs  moddedsheet.rs  serenadesheet.rs  wafrody.rs
src/components/: UpdateDialog.jsx
src/components/auth/: LoginDialog.jsx
src/components/ui/: button.jsx  checkbox.jsx  dialog.jsx  input.jsx  select.jsx  slider.jsx  switch.jsx
src/lib/: theme.js  windowMode.js
src/pages/: LauncherPage.jsx
thunderstore/: README.md  manifest.json
