[package]
name = "hq-launcher"
version = "1.5.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hq_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Stream download chunks (for progress updates).
futures-util = "0.3"
# Unzip downloaded versions.
zip = "2"
# Untar Proton-GE tar.gz on Linux
tar = "0.4"
flate2 = "1"
# Avoid pulling in rustls/aws-lc-sys (which requires CMake/NASM on Windows) by using the OS TLS backend.
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls", "stream", "json", "http2", "blocking"] }
log = "0.4.29"
log4rs = "1.4.0"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros"] }
expectrl = "0.7"
semver = "1"
opener = "0.8.3"
dirs = "6.0.0"
discord-rich-presence = "0.2"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "native-tls"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
